# whatssock-desktop

./: Cargo.toml  Dioxus.toml  test  user_session
assets/: main.css
src/: api_requests.rs  lib.rs  main.rs
src/authentication/: auth.rs  mod.rs
src/ui/: login.rs  main_page.rs  mod.rs  not_found.rs  register.rs
