[package]
name = "whatssock-desktop"
version = "0.1.0"
authors = ["Varga Marcell <128537619+marci1175@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
dioxus = { version = "0.6.0", features = ["router"] }
parking_lot = "0.12.4"
reqwest = "0.12.22"
rmp-serde = "1.3.0"
serde = "1.0.219"
serde_json = "1.0.140"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
